--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div id="question-number"> 
             Question 1
         </div>
+        <div id="timer">
+            Time: 30
+        </div>
         <div id="question">
             Question will appear here
         </div>
