Added progress bar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <div id="timer">
             Time: 30
         </div>
+        
+        <div class="progress-wrap">
+            <div id="progress" class="progress"></div>
+        </div>
+
         <div id="question">
             Question will appear here
         </div>
