Updating font family, color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="quiz-container">
-        <h1>Quiz App</h1>
+        <h1>QUIZ APP</h1>
 
         <div id="question-number"> 
             Question 1
@@ -16,7 +16,7 @@
         <div id="timer">
             Time: 30
         </div>
-        
+
         <div class="progress-wrap">
             <div id="progress" class="progress"></div>
         </div>
