Add start button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <button id="start-btn">Start Quiz</button>
+
     <div class="quiz-container">
         <h1>QUIZ APP</h1>
 
